omnibus/proto/antlr/Protobuf3Parser.py
# flake8: noqa
# Generated from Protobuf3.g4 by ANTLR 4.8
# encoding: utf-8
from ..._vendor.antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Protobuf3Parser ( Parser ):

    grammarFileName = "Protobuf3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'('", "')'", "'.'", "'{'", 
                     "'}'", "':'", "'-'", "'['", "','", "']'", "'<'", "'>'", 
                     "'+'", "'bool'", "'bytes'", "'double'", "'enum'", "'extend'", 
                     "'fixed32'", "'fixed64'", "'float'", "'import'", "'int32'", 
                     "'int64'", "'map'", "'message'", "'oneof'", "'option'", 
                     "'package'", "'\"proto3\"'", "''proto3''", "'public'", 
                     "'repeated'", "'reserved'", "'returns'", "'rpc'", "'service'", 
                     "'sfixed32'", "'sfixed64'", "'sint32'", "'sint64'", 
                     "'stream'", "'string'", "'syntax'", "'to'", "'uint32'", 
                     "'uint64'", "'weak'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOL", "BYTES", "DOUBLE", "ENUM", "EXTEND", "FIXED32", 
                      "FIXED64", "FLOAT", "IMPORT", "INT32", "INT64", "MAP", 
                      "MESSAGE", "ONEOF", "OPTION", "PACKAGE", "PROTO3_DOUBLE", 
                      "PROTO3_SINGLE", "PUBLIC", "REPEATED", "RESERVED", 
                      "RETURNS", "RPC", "SERVICE", "SFIXED32", "SFIXED64", 
                      "SINT32", "SINT64", "STREAM", "STRING", "SYNTAX", 
                      "TO", "UINT32", "UINT64", "WEAK", "Ident", "IntLit", 
                      "FloatLit", "BoolLit", "StrLit", "Quote", "WS", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_proto = 0
    RULE_syntax = 1
    RULE_syntaxExtra = 2
    RULE_importStatement = 3
    RULE_packageStatement = 4
    RULE_option = 5
    RULE_optionName = 6
    RULE_optionBody = 7
    RULE_optionBodyVariable = 8
    RULE_topLevelDef = 9
    RULE_message = 10
    RULE_messageBody = 11
    RULE_messageBodyContent = 12
    RULE_enumDefinition = 13
    RULE_enumBody = 14
    RULE_enumField = 15
    RULE_enumValueOption = 16
    RULE_extend = 17
    RULE_service = 18
    RULE_rpc = 19
    RULE_reserved = 20
    RULE_ranges = 21
    RULE_rangeRule = 22
    RULE_fieldNames = 23
    RULE_typeRule = 24
    RULE_simpleType = 25
    RULE_fieldNumber = 26
    RULE_field = 27
    RULE_fieldOptions = 28
    RULE_fieldOption = 29
    RULE_oneof = 30
    RULE_oneofField = 31
    RULE_mapField = 32
    RULE_keyType = 33
    RULE_reservedWord = 34
    RULE_fullIdent = 35
    RULE_messageName = 36
    RULE_enumName = 37
    RULE_messageOrEnumName = 38
    RULE_fieldName = 39
    RULE_oneofName = 40
    RULE_mapName = 41
    RULE_serviceName = 42
    RULE_rpcName = 43
    RULE_messageType = 44
    RULE_messageOrEnumType = 45
    RULE_emptyStatement = 46
    RULE_constant = 47

    ruleNames =  [ "proto", "syntax", "syntaxExtra", "importStatement", 
                   "packageStatement", "option", "optionName", "optionBody", 
                   "optionBodyVariable", "topLevelDef", "message", "messageBody", 
                   "messageBodyContent", "enumDefinition", "enumBody", "enumField", 
                   "enumValueOption", "extend", "service", "rpc", "reserved", 
                   "ranges", "rangeRule", "fieldNames", "typeRule", "simpleType", 
                   "fieldNumber", "field", "fieldOptions", "fieldOption", 
                   "oneof", "oneofField", "mapField", "keyType", "reservedWord", 
                   "fullIdent", "messageName", "enumName", "messageOrEnumName", 
                   "fieldName", "oneofName", "mapName", "serviceName", "rpcName", 
                   "messageType", "messageOrEnumType", "emptyStatement", 
                   "constant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    BOOL=16
    BYTES=17
    DOUBLE=18
    ENUM=19
    EXTEND=20
    FIXED32=21
    FIXED64=22
    FLOAT=23
    IMPORT=24
    INT32=25
    INT64=26
    MAP=27
    MESSAGE=28
    ONEOF=29
    OPTION=30
    PACKAGE=31
    PROTO3_DOUBLE=32
    PROTO3_SINGLE=33
    PUBLIC=34
    REPEATED=35
    RESERVED=36
    RETURNS=37
    RPC=38
    SERVICE=39
    SFIXED32=40
    SFIXED64=41
    SINT32=42
    SINT64=43
    STREAM=44
    STRING=45
    SYNTAX=46
    TO=47
    UINT32=48
    UINT64=49
    WEAK=50
    Ident=51
    IntLit=52
    FloatLit=53
    BoolLit=54
    StrLit=55
    Quote=56
    WS=57
    COMMENT=58
    LINE_COMMENT=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProtoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def syntax(self):
            return self.getTypedRuleContext(Protobuf3Parser.SyntaxContext,0)


        def EOF(self):
            return self.getToken(Protobuf3Parser.EOF, 0)

        def syntaxExtra(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.SyntaxExtraContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.SyntaxExtraContext,i)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_proto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProto" ):
                listener.enterProto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProto" ):
                listener.exitProto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProto" ):
                return visitor.visitProto(self)
            else:
                return visitor.visitChildren(self)




    def proto(self):

        localctx = Protobuf3Parser.ProtoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_proto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.syntax()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Protobuf3Parser.T__1) | (1 << Protobuf3Parser.ENUM) | (1 << Protobuf3Parser.EXTEND) | (1 << Protobuf3Parser.IMPORT) | (1 << Protobuf3Parser.MESSAGE) | (1 << Protobuf3Parser.OPTION) | (1 << Protobuf3Parser.PACKAGE) | (1 << Protobuf3Parser.SERVICE))) != 0):
                self.state = 97
                self.syntaxExtra()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(Protobuf3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SyntaxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYNTAX(self):
            return self.getToken(Protobuf3Parser.SYNTAX, 0)

        def PROTO3_DOUBLE(self):
            return self.getToken(Protobuf3Parser.PROTO3_DOUBLE, 0)

        def PROTO3_SINGLE(self):
            return self.getToken(Protobuf3Parser.PROTO3_SINGLE, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_syntax

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSyntax" ):
                listener.enterSyntax(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSyntax" ):
                listener.exitSyntax(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyntax" ):
                return visitor.visitSyntax(self)
            else:
                return visitor.visitChildren(self)




    def syntax(self):

        localctx = Protobuf3Parser.SyntaxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_syntax)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(Protobuf3Parser.SYNTAX)
            self.state = 106
            self.match(Protobuf3Parser.T__0)
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==Protobuf3Parser.PROTO3_DOUBLE or _la==Protobuf3Parser.PROTO3_SINGLE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 108
            self.match(Protobuf3Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SyntaxExtraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStatement(self):
            return self.getTypedRuleContext(Protobuf3Parser.ImportStatementContext,0)


        def packageStatement(self):
            return self.getTypedRuleContext(Protobuf3Parser.PackageStatementContext,0)


        def option(self):
            return self.getTypedRuleContext(Protobuf3Parser.OptionContext,0)


        def topLevelDef(self):
            return self.getTypedRuleContext(Protobuf3Parser.TopLevelDefContext,0)


        def emptyStatement(self):
            return self.getTypedRuleContext(Protobuf3Parser.EmptyStatementContext,0)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_syntaxExtra

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSyntaxExtra" ):
                listener.enterSyntaxExtra(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSyntaxExtra" ):
                listener.exitSyntaxExtra(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyntaxExtra" ):
                return visitor.visitSyntaxExtra(self)
            else:
                return visitor.visitChildren(self)




    def syntaxExtra(self):

        localctx = Protobuf3Parser.SyntaxExtraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_syntaxExtra)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Protobuf3Parser.IMPORT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.importStatement()
                pass
            elif token in [Protobuf3Parser.PACKAGE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.packageStatement()
                pass
            elif token in [Protobuf3Parser.OPTION]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.option()
                pass
            elif token in [Protobuf3Parser.ENUM, Protobuf3Parser.EXTEND, Protobuf3Parser.MESSAGE, Protobuf3Parser.SERVICE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.topLevelDef()
                pass
            elif token in [Protobuf3Parser.T__1]:
                self.enterOuterAlt(localctx, 5)
                self.state = 114
                self.emptyStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(Protobuf3Parser.IMPORT, 0)

        def StrLit(self):
            return self.getToken(Protobuf3Parser.StrLit, 0)

        def WEAK(self):
            return self.getToken(Protobuf3Parser.WEAK, 0)

        def PUBLIC(self):
            return self.getToken(Protobuf3Parser.PUBLIC, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = Protobuf3Parser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(Protobuf3Parser.IMPORT)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Protobuf3Parser.PUBLIC or _la==Protobuf3Parser.WEAK:
                self.state = 118
                _la = self._input.LA(1)
                if not(_la==Protobuf3Parser.PUBLIC or _la==Protobuf3Parser.WEAK):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 121
            self.match(Protobuf3Parser.StrLit)
            self.state = 122
            self.match(Protobuf3Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(Protobuf3Parser.PACKAGE, 0)

        def fullIdent(self):
            return self.getTypedRuleContext(Protobuf3Parser.FullIdentContext,0)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_packageStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageStatement" ):
                listener.enterPackageStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageStatement" ):
                listener.exitPackageStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageStatement" ):
                return visitor.visitPackageStatement(self)
            else:
                return visitor.visitChildren(self)




    def packageStatement(self):

        localctx = Protobuf3Parser.PackageStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_packageStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(Protobuf3Parser.PACKAGE)
            self.state = 125
            self.fullIdent()
            self.state = 126
            self.match(Protobuf3Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPTION(self):
            return self.getToken(Protobuf3Parser.OPTION, 0)

        def optionName(self):
            return self.getTypedRuleContext(Protobuf3Parser.OptionNameContext,0)


        def constant(self):
            return self.getTypedRuleContext(Protobuf3Parser.ConstantContext,0)


        def optionBody(self):
            return self.getTypedRuleContext(Protobuf3Parser.OptionBodyContext,0)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOption" ):
                return visitor.visitOption(self)
            else:
                return visitor.visitChildren(self)




    def option(self):

        localctx = Protobuf3Parser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_option)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(Protobuf3Parser.OPTION)
            self.state = 129
            self.optionName()
            self.state = 130
            self.match(Protobuf3Parser.T__0)
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Protobuf3Parser.T__8, Protobuf3Parser.T__14, Protobuf3Parser.Ident, Protobuf3Parser.IntLit, Protobuf3Parser.FloatLit, Protobuf3Parser.BoolLit, Protobuf3Parser.StrLit]:
                self.state = 131
                self.constant()
                pass
            elif token in [Protobuf3Parser.T__5]:
                self.state = 132
                self.optionBody()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 135
            self.match(Protobuf3Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self, i:int=None):
            if i is None:
                return self.getTokens(Protobuf3Parser.Ident)
            else:
                return self.getToken(Protobuf3Parser.Ident, i)

        def fullIdent(self):
            return self.getTypedRuleContext(Protobuf3Parser.FullIdentContext,0)


        def reservedWord(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.ReservedWordContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.ReservedWordContext,i)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_optionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionName" ):
                listener.enterOptionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionName" ):
                listener.exitOptionName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionName" ):
                return visitor.visitOptionName(self)
            else:
                return visitor.visitChildren(self)




    def optionName(self):

        localctx = Protobuf3Parser.OptionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_optionName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Protobuf3Parser.Ident]:
                self.state = 137
                self.match(Protobuf3Parser.Ident)
                pass
            elif token in [Protobuf3Parser.T__2]:
                self.state = 138
                self.match(Protobuf3Parser.T__2)
                self.state = 139
                self.fullIdent()
                self.state = 140
                self.match(Protobuf3Parser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Protobuf3Parser.T__4:
                self.state = 144
                self.match(Protobuf3Parser.T__4)
                self.state = 147
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [Protobuf3Parser.Ident]:
                    self.state = 145
                    self.match(Protobuf3Parser.Ident)
                    pass
                elif token in [Protobuf3Parser.EXTEND, Protobuf3Parser.MESSAGE, Protobuf3Parser.OPTION, Protobuf3Parser.PACKAGE, Protobuf3Parser.RPC, Protobuf3Parser.SERVICE, Protobuf3Parser.STREAM, Protobuf3Parser.STRING, Protobuf3Parser.SYNTAX, Protobuf3Parser.WEAK]:
                    self.state = 146
                    self.reservedWord()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optionBodyVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.OptionBodyVariableContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.OptionBodyVariableContext,i)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_optionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionBody" ):
                listener.enterOptionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionBody" ):
                listener.exitOptionBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionBody" ):
                return visitor.visitOptionBody(self)
            else:
                return visitor.visitChildren(self)




    def optionBody(self):

        localctx = Protobuf3Parser.OptionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_optionBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(Protobuf3Parser.T__5)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Protobuf3Parser.T__2 or _la==Protobuf3Parser.Ident:
                self.state = 155
                self.optionBodyVariable()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(Protobuf3Parser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionBodyVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optionName(self):
            return self.getTypedRuleContext(Protobuf3Parser.OptionNameContext,0)


        def constant(self):
            return self.getTypedRuleContext(Protobuf3Parser.ConstantContext,0)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_optionBodyVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionBodyVariable" ):
                listener.enterOptionBodyVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionBodyVariable" ):
                listener.exitOptionBodyVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionBodyVariable" ):
                return visitor.visitOptionBodyVariable(self)
            else:
                return visitor.visitChildren(self)




    def optionBodyVariable(self):

        localctx = Protobuf3Parser.OptionBodyVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_optionBodyVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.optionName()
            self.state = 164
            self.match(Protobuf3Parser.T__7)
            self.state = 165
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def message(self):
            return self.getTypedRuleContext(Protobuf3Parser.MessageContext,0)


        def enumDefinition(self):
            return self.getTypedRuleContext(Protobuf3Parser.EnumDefinitionContext,0)


        def extend(self):
            return self.getTypedRuleContext(Protobuf3Parser.ExtendContext,0)


        def service(self):
            return self.getTypedRuleContext(Protobuf3Parser.ServiceContext,0)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_topLevelDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelDef" ):
                listener.enterTopLevelDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelDef" ):
                listener.exitTopLevelDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelDef" ):
                return visitor.visitTopLevelDef(self)
            else:
                return visitor.visitChildren(self)




    def topLevelDef(self):
